language/move-compiler/tests/move_check/translate/constant_invalid_top_level.exp
error[E02006]: invalid 'const' declaration
  ┌─ tests/move_check/translate/constant_invalid_top_level.move:1:1
  │
1 │ const a:u32 = 123;
  │ ^^^^^^^^^^^^^^^^^^ Invalid code unit. Expected 'address', 'module', or 'script'. Got 'const'

