language/move-compiler/tests/move_check/translate/constant_invalid_top_level.move
const a:u32 = 123;
